--- a/web/menu/menu.css
+++ b/web/menu/menu.css
@@ -2,7 +2,7 @@
     position:fixed;
     background:white;
     width:100%;
-    height: 2em;
+    height: 2.5em;
     top:0;
     left:0;
     background-color: orange;
@@ -11,5 +11,20 @@
 }
 
 #homeContent{
-    margin-top: 3em;
+    margin-top: 3.5em;
+    top:0;
+    left:0;
+    width:100%;
+    height: 100%;
+}
+
+#searchBarInput{
+    border-radius: 7px;
+    width: 50%;
+    height:1.5em;
+    margin-left: 20%;
+}
+
+#settings{
+    margin-left: 10%;
 }
