--- a/web/content/content.css
+++ b/web/content/content.css
@@ -1,18 +1,44 @@
 #contentTitle{
-    margin-left: 35%;
+    margin-left: 15%;
     padding-top: 2%;
 }
 
 #contentPage{
-    padding:1% 0% 5% 40%;
+    padding:1% 25% 5% 22%;
 }
 
 .submitContent{
     width: 10%;
-    margin-left:30%;
+    margin-left:60%;
+    border-radius:5px;
+    background: rgb(252,234,187); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(252,234,187,1) 0%, rgba(252,205,77,1) 50%, rgba(248,181,0,1) 51%, rgba(251,223,147,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(252,234,187,1)), color-stop(50%,rgba(252,205,77,1)), color-stop(51%,rgba(248,181,0,1)), color-stop(100%,rgba(251,223,147,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', endColorstr='#fbdf93',GradientType=0 ); /* IE6-9 */
+
 }
 
 #contentPage .contentInput{
-    width:40%;
+    width:60%;
+    margin-left: 10%;
+
+}
+
+.Information{
+    background-image:radial-gradient(white, #F2F1ED);/*#FCF8E3);/*#F2F1ED);*/
+    box-shadow: 5px 5px 15px #BAB8AF; /*#A3A29D; /*555*/
+    border-color: white;
+    border-style: solid;
+}
+
+.Section{
+    margin-left:10%;
+    margin-bottom: 10%;
+    margin-top: 10%;
+    margin-right: 0%;
 }
 
