--- a/web/profile/profile.css
+++ b/web/profile/profile.css
@@ -1,33 +1,61 @@
 #profileTitle{
-    margin-left: 35%;
+    margin-left: 15%;
     padding-top: 2%;
 }
 
 #profilePage{
-    padding:2% 0% 5% 40%;
+    padding:1% 10% 2% 10%;
 }
 
 #sexProfile{
-    margin-left: 34%;
+    margin-left: 40%;
 }
 
 #birthdayProfile{
-    width: 39.7%;
+    width: 46.8%;
 }
 
 #occupationProfile{
-    width: 37.6%;
-}
-
-#countryProfile{
-    width: 40.6%;
+    width: 44.4%;
 }
 
 #hobbiesProfile{
-    width: 39.8%;
+    width: 47%;
 }
+
+#countryProfile{
+    width: 47.9%;
+}
+
+
 
 #submitProfile{
     width: 10%;
+    border-radius:5px;
+    margin-left:40%;
+    background: rgb(252,234,187); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(252,234,187,1) 0%, rgba(252,205,77,1) 50%, rgba(248,181,0,1) 51%, rgba(251,223,147,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(252,234,187,1)), color-stop(50%,rgba(252,205,77,1)), color-stop(51%,rgba(248,181,0,1)), color-stop(100%,rgba(251,223,147,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', endColorstr='#fbdf93',GradientType=0 ); /* IE6-9 */
+
+}
+
+#informationProfile{
+    background-image:radial-gradient(white, #F2F1ED);/*#FCF8E3);/*#F2F1ED);*/
+    box-shadow: 5px 5px 15px #BAB8AF; /*#A3A29D; /*555*/
+    border-color: white;
+    border-style: solid;
+    margin-right: 10%;
+    margin-left:10%;
+}
+
+#sectionProfile{
     margin-left:20%;
+    margin-bottom: 2%;
+    margin-top: 2%;
+    margin-right: 0%;
 }
