--- a/web/login/login.css
+++ b/web/login/login.css
@@ -1,7 +1,10 @@
 #loginPage{
-    background-image:linear-gradient(white 85%, orange);
+    background-image:linear-gradient(#F2F1ED 90%, orange);
     width: 100%;
-    height: 38.70em;
+    height: 100%;/*38.70em;*/
+    top:0;
+    left:0;
+    position: absolute;
 }
 
 #login_authentification
@@ -9,7 +12,7 @@
     display: flex;
     padding: 1em;
     background: orange;
-    width: 95%;
+    width: 90%;
     border-radius: 15px;
     margin: 3.5% 2.5%;/*
     text-align: right;
@@ -29,7 +32,7 @@
 {
     flex:2;
     display:inline-block;
-    margin-left: 44%;
+    margin-left: 40%;
 }
 
 #application_name
