CSS: profile page + content page
Work in progress

--- a/web/content/content.css
+++ b/web/content/content.css
@@ -9,7 +9,7 @@
 
 .submitContent{
     width: 10%;
-    margin-left:60%;
+    margin-left:70%;
     border-radius:5px;
     background: rgb(252,234,187); /* Old browsers */
     background: -moz-linear-gradient(top,  rgba(252,234,187,1) 0%, rgba(252,205,77,1) 50%, rgba(248,181,0,1) 51%, rgba(251,223,147,1) 100%); /* FF3.6+ */
@@ -31,14 +31,36 @@
 .Information{
     background-image:radial-gradient(white, #F2F1ED);/*#FCF8E3);/*#F2F1ED);*/
     box-shadow: 5px 5px 15px #BAB8AF; /*#A3A29D; /*555*/
-    border-color: white;
-    border-style: solid;
+    border: solid white;
 }
 
 .Section{
-    margin-left:10%;
-    margin-bottom: 10%;
-    margin-top: 10%;
-    margin-right: 0%;
+    margin: 10% 0 10% 10%;
 }
+
+.inputStyleContent
+{
+    border-radius: 7px;
+    border: solid 1px rgba(252,205,77,1);
+    background-color: white;
+    /*background-color: rgba(252,234,187,1);*/
+    /*background: -moz-linear-gradient(top,  rgba(252,234,187,1) 0%, rgba(252,205,77,1) 50%, rgba(248,181,0,1) 51%, rgba(251,223,147,1) 100%); /* FF3.6+ */
+    box-shadow: inset 2px 1px 5px rgba(248,181,0,1);
+    padding: 5px 10px;
+    color: #005;
+}
+
+.inputStyleContent:focus
+{
+    box-shadow: inset 0 0 0 rgba(248,181,0,1), 0 0 0 rgba(248,181,0,1);
+}
+
+.tableContent{
+    width: 100%;
+}
+
+.tableContent td{
+    height: 3em;
+}
+
 
