--- a/web/index.css
+++ b/web/index.css
@@ -1,3 +1,4 @@
 #page{
-    background-color: #F7FAF8; /*#F5F3F0;*/
+    background-color: #FFFDFA;/*#FAF5ED;/*white;/*white*/ /*#F7FAF8;/*light grey*/ /*#F5F3F0;*/
+    font-family: Helvetica, "Segoe UI", Georgia, Arial, sans-serif;
 }
