--- a/web/profile/profile.css
+++ b/web/profile/profile.css
@@ -8,31 +8,15 @@
 }
 
 #sexProfile{
-    margin-left: 40%;
+    margin-left: 48.5%;
 }
-
-#birthdayProfile{
-    width: 46.8%;
-}
-
-#occupationProfile{
-    width: 44.4%;
-}
-
-#hobbiesProfile{
-    width: 47%;
-}
-
-#countryProfile{
-    width: 47.9%;
-}
-
-
 
 #submitProfile{
     width: 10%;
     border-radius:5px;
-    margin-left:50%;
+    margin-top: 1%;
+    margin-left:60%;
+    position: relative;
     background: rgb(252,234,187); /* Old browsers */
     background: -moz-linear-gradient(top,  rgba(252,234,187,1) 0%, rgba(252,205,77,1) 50%, rgba(248,181,0,1) 51%, rgba(251,223,147,1) 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(252,234,187,1)), color-stop(50%,rgba(252,205,77,1)), color-stop(51%,rgba(248,181,0,1)), color-stop(100%,rgba(251,223,147,1))); /* Chrome,Safari4+ */
@@ -41,21 +25,46 @@
     background: -ms-linear-gradient(top,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); /* IE10+ */
     background: linear-gradient(to bottom,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', endColorstr='#fbdf93',GradientType=0 ); /* IE6-9 */
-
 }
 
 #informationProfile{
     background-image:radial-gradient(white, #F2F1ED);/*#FCF8E3);/*#F2F1ED);*/
     box-shadow: 5px 5px 15px #BAB8AF; /*#A3A29D; /*555*/
-    border-color: white;
-    border-style: solid;
+    border: solid white;
     margin-right: 10%;
     margin-left:10%;
 }
 
 #sectionProfile{
-    margin-left:20%;
-    margin-bottom: 6.5%;
-    margin-top: 5%;
-    margin-right: 0%;
+    margin: 5% 0 6.5% 20%;
 }
+
+.style2
+{
+    border-radius: 7px;
+    border: solid 1px rgba(252,205,77,1);
+    background-color: white;
+    /*background-color: rgba(252,234,187,1);*/
+    /*background: -moz-linear-gradient(top,  rgba(252,234,187,1) 0%, rgba(252,205,77,1) 50%, rgba(248,181,0,1) 51%, rgba(251,223,147,1) 100%); /* FF3.6+ */
+    box-shadow: inset 2px 1px 5px rgba(248,181,0,1);
+    padding: 5px 10px;
+    color: #005;
+}
+
+.style2:focus
+{
+    box-shadow: inset 0 0 0 rgba(248,181,0,1), 0 0 0 rgba(248,181,0,1);
+}
+
+.inputSize{
+    width:20em;
+}
+
+.selectSize{
+    width:21.3em;
+}
+
+#tableProfile td{
+    height: 3em;
+}
+
