--- a/web/content/content.css
+++ b/web/content/content.css
@@ -43,8 +43,6 @@
     border-radius: 7px;
     border: solid 1px rgba(252,205,77,1);
     background-color: white;
-    /*background-color: rgba(252,234,187,1);*/
-    /*background: -moz-linear-gradient(top,  rgba(252,234,187,1) 0%, rgba(252,205,77,1) 50%, rgba(248,181,0,1) 51%, rgba(251,223,147,1) 100%); /* FF3.6+ */
     box-shadow: inset 2px 1px 5px rgba(248,181,0,1);
     padding: 5px 10px;
     color: #005;
@@ -53,6 +51,16 @@
 .inputStyleContent:focus
 {
     box-shadow: inset 0 0 0 rgba(248,181,0,1), 0 0 0 rgba(248,181,0,1);
+}
+
+.inputStyleContentError
+{
+    border-radius: 7px;
+    border: solid 1px red;
+    background-color: white;
+    box-shadow: inset 2px 1px 5px red;
+    padding: 5px 10px;
+    color: black;
 }
 
 .tableContent{
