Control on input field of Content page
DONE using ng-class (modify css class and ng-keyup for the event listener)

To Do - DAO + WebService for content page:
Erase values from input fields once inserted in database (coded but don't work)
need to add Read Update Delete and Find All web services

--- a/web/content/content.css
+++ b/web/content/content.css
@@ -22,6 +22,21 @@
 
 }
 
+.submitContentError{
+    width: 10%;
+    margin-left:70%;
+    border-radius:5px;
+    /*background: rgb(252,234,187); /* Old browsers */
+    /*background: -moz-linear-gradient(top,  rgba(252,234,187,1) 0%, rgba(252,205,77,1) 50%, rgba(248,181,0,1) 51%, rgba(251,223,147,1) 100%); *//* FF3.6+ */
+    /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(252,234,187,1)), color-stop(50%,rgba(252,205,77,1)), color-stop(51%,rgba(248,181,0,1)), color-stop(100%,rgba(251,223,147,1))); *//* Chrome,Safari4+ */
+    /*background: -webkit-linear-gradient(top,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); *//* Chrome10+,Safari5.1+ */
+    /*background: -o-linear-gradient(top,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); *//* Opera 11.10+ */
+    /*background: -ms-linear-gradient(top,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); *//* IE10+ */
+    /*background: linear-gradient(to bottom,  rgba(252,234,187,1) 0%,rgba(252,205,77,1) 50%,rgba(248,181,0,1) 51%,rgba(251,223,147,1) 100%); *//* W3C */
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', endColorstr='#fbdf93',GradientType=0 ); *//* IE6-9 */
+
+}
+
 #contentPage .contentInput{
     width:60%;
     margin-left: 10%;
