--- a/web/profile/profile.css
+++ b/web/profile/profile.css
@@ -11,7 +11,7 @@
     margin-left: 48.5%;
 }
 
-#submitProfile{
+.submitProfile{
     width: 10%;
     border-radius:5px;
     margin-top: 1%;
@@ -27,6 +27,14 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', endColorstr='#fbdf93',GradientType=0 ); /* IE6-9 */
 }
 
+.submitProfileError{
+    width: 10%;
+    border-radius:5px;
+    margin-top: 1%;
+    margin-left:60%;
+    position: relative;
+    }
+
 #informationProfile{
     background-image:radial-gradient(white, #F2F1ED);/*#FCF8E3);/*#F2F1ED);*/
     box-shadow: 5px 5px 15px #BAB8AF; /*#A3A29D; /*555*/
@@ -39,7 +47,7 @@
     margin: 5% 0 6.5% 20%;
 }
 
-.style2
+.styleInput
 {
     border-radius: 7px;
     border: solid 1px rgba(252,205,77,1);
@@ -51,9 +59,21 @@
     color: #005;
 }
 
-.style2:focus
+.styleInput:focus
 {
     box-shadow: inset 0 0 0 rgba(248,181,0,1), 0 0 0 rgba(248,181,0,1);
+}
+
+.styleInputError
+{
+    border-radius: 7px;
+    border: solid 1px red;
+    background-color: white;
+    /*background-color: rgba(252,234,187,1);*/
+    /*background: -moz-linear-gradient(top,  rgba(252,234,187,1) 0%, rgba(252,205,77,1) 50%, rgba(248,181,0,1) 51%, rgba(251,223,147,1) 100%); /* FF3.6+ */
+    box-shadow: inset 2px 1px 5px red;
+    padding: 5px 10px;
+    color: black;
 }
 
 .inputSize{
